--- a/app/views/provider/invitee_signups/show.html.erb
+++ b/app/views/provider/invitee_signups/show.html.erb
@@ -1,16 +1,28 @@
-<h2>Sign Up to <%= @invitation.account.name %></h2>
+<%= javascript_pack_tag 'SignUpPage' %>
 
-<%= semantic_form_for @user, :url => provider_invitee_signup_path(@invitation.token),
-                            :builder => Fields::FormBuilder,
-                            :html => {:id => 'signup_form'} do |form| %>
+<div id="old-signup-page-wrapper">
+  <h2>Sign Up to <%= @invitation.account.name %></h2>
+
+ 
+<%= semantic_form_for @user, :url => provider_invitee_signup_path(@invitation.token),	
+                            :builder => Fields::FormBuilder,	    
+                            :html => {:id => 'signup_form'} do |form| %>	 
   <%= form.inputs do -%>
-    <%= form.user_defined_form %>
-    <%= form.input :password, :required => true %>
-    <%= form.input :password_confirmation, :required => true %>
-  <% end %>
+    <%= form.user_defined_form %>	
+    <%= form.input :password, :required => true %>	
+    <%= form.input :password_confirmation, :required => true %>	
+  <% end %>	
 
-  <%= form.buttons do %>
-    <%= form.commit_button 'Sign up', :button_html => {:class => 'user-signup important-button'} %>
-  <% end %>
+   <%= form.buttons do %>	
+    <%= form.commit_button 'Sign up', :button_html => {:class => 'user-signup important-button'} %>	
+  <% end %>	
 
-<% end %>
+ <% end %>
+</div>
+
+<%= tag("div", :id => "signup-page-container", :data => {
+  :props => {
+    :path => provider_invitee_signup_path(@invitation.token),
+    :name => @invitation.account.name
+  }
+}) %>
