Passing user email to form

--- a/app/views/provider/invitee_signups/show.html.erb
+++ b/app/views/provider/invitee_signups/show.html.erb
@@ -22,6 +22,7 @@
 
 <%= tag("div", :id => "signup-page-container", :data => {
   :props => {
+    :email => @user.email,
     :path => provider_invitee_signup_path(@invitation.token),
     :name => @invitation.account.name
   }
