Renaming login-page-container to pf-login-page-container to make clear is the PF4 component container

--- a/app/javascript/src/LoginPage/assets/styles/loginPage.scss
+++ b/app/javascript/src/LoginPage/assets/styles/loginPage.scss
@@ -19,7 +19,7 @@ $pf-black-500:  #8b8d8f; // $osloGray
 $--pf-global--danger-color--100: #c9190b;
 $--pf-global--info-color--200:	#004368;
 
-#login-page-container {
+#pf-login-page-container {
 
   .pf-c-background-image::before {
     filter: none;
