--- a/app/views/provider/admin/backend_apis/show.html.slim
+++ b/app/views/provider/admin/backend_apis/show.html.slim
@@ -28,6 +28,6 @@ section class="service-widget"
       h2 Methods & Mapping Rules
       ul.application-plans
         li.item
-          = pluralize(@backend_api.method_metrics.size, 'method')
+          = link_to pluralize(@backend_api.method_metrics.size, 'method'), admin_service_metrics_path(@backend_api.service)
         li.item
           = pluralize(@backend_api.mapping_rules.size, 'mapping rule')
