:lipstick: overrides hover text decoration introduced by pf4 react

--- a/app/assets/stylesheets/provider/_menu.scss
+++ b/app/assets/stylesheets/provider/_menu.scss
@@ -55,6 +55,7 @@ ul.login-form-links {
 
       &:hover {
         color: $menu-hover-color;
+        text-decoration: underline;
       }
     }
   }
@@ -92,6 +93,7 @@ ul.login-form-links {
 
     &:hover {
       color: $menu-hover-color;
+      text-decoration: underline;
     }
   }
 }
