--- a/app/views/api/plans/_metrics.html.erb
+++ b/app/views/api/plans/_metrics.html.erb
@@ -53,7 +53,7 @@
           </td>
         </tr>
       <% else -%>
-        <%= render partial: 'api/metrics/top_level', as: :metric, collection: @service.top_level_metrics, locals: { include_children: @service.acts_as_traditional_service? } %>
+        <%= render partial: 'api/metrics/top_level', as: :metric, collection: @service.service_level_metrics, locals: { include_children: @service.acts_as_traditional_service? } %>
       <% end -%>
     </tbody>
   </table>
