--- a/app/views/provider/admin/backend_apis/mapping_rules/index.html.slim
+++ b/app/views/provider/admin/backend_apis/mapping_rules/index.html.slim
@@ -24,7 +24,7 @@ section.Section
             th
               ' Metric or Method
               | (
-              = link_to 'Define', admin_service_metrics_path(@backend_api.service), title: 'Define Methods & Metrics for this service'
+              = link_to 'Define', provider_admin_backend_api_metrics_path(@backend_api), title: 'Define Methods & Metrics for this service'
               | )
             th colspan="2"
               ' Last?
