--- a/app/views/provider/admin/backend_apis/index.html.slim
+++ b/app/views/provider/admin/backend_apis/index.html.slim
@@ -12,4 +12,4 @@ table#backend_apis
         td
           = backend_api.system_name
         td
-          = backend_api.private_url
+          = backend_api.private_endpoint
