--- a/app/views/provider/admin/backend_apis/show.html.slim
+++ b/app/views/provider/admin/backend_apis/show.html.slim
@@ -12,7 +12,7 @@ section.Section
         dt.u-dl-term Description
         dd.u-dl-definition == description
       dt.u-dl-term Private Base URL
-      dd.u-dl-definition == @backend_api.private_url
+      dd.u-dl-definition == @backend_api.private_endpoint
 
 section class="service-widget"
   div.content-service
