--- a/app/views/api/integrations/apicast/configuration_driven/_configuration.html.slim
+++ b/app/views/api/integrations/apicast/configuration_driven/_configuration.html.slim
@@ -36,7 +36,7 @@
                   = link_to provider_admin_backend_api_path(backend_api) do
                     => backend_api.name
                 td
-                  = backend_api.private_url
+                  = backend_api.private_endpoint
 
       - else
         = f.inputs "API" do
