--- a/app/views/provider/admin/backend_apis/show.html.slim
+++ b/app/views/provider/admin/backend_apis/show.html.slim
@@ -28,6 +28,6 @@ section class="service-widget"
       h2 Methods & Mapping Rules
       ul.application-plans
         li.item
-          = link_to pluralize(@backend_api.method_metrics.size, 'method'), provider_admin_backend_api_metrics_path(@backend_api)
+          = link_to pluralize(@backend_api.method_metrics&.size, 'method'), provider_admin_backend_api_metrics_path(@backend_api)
         li.item
-          = link_to pluralize(@backend_api.mapping_rules.size, 'mapping rule'), provider_admin_backend_api_mapping_rules_path(@backend_api)
+          = link_to pluralize(@backend_api.mapping_rules&.size, 'mapping rule'), provider_admin_backend_api_mapping_rules_path(@backend_api)
