--- a/app/views/provider/admin/backend_apis/mapping_rules/index.html.slim
+++ b/app/views/provider/admin/backend_apis/mapping_rules/index.html.slim
@@ -1,46 +1,37 @@
-h1 Mapping Rules
+h2 Mapping Rules
 
-section.Section
-  .SettingsBox
+table#proxy-rules
+  thead
+    tr
+      th Verb
+      th Pattern
+      th title="increment" +
+      th
+        ' Metric or Method
+        | (
+        = link_to 'Define', provider_admin_backend_api_metrics_path(@backend_api), title: 'Define Methods & Metrics for this service'
+        | )
+      th colspan="2"
+        ' Last?
+      th.actions
+        = link_to 'New Mapping Rule',
+                  new_provider_admin_backend_api_mapping_rule_path(@backend_api),
+                  class:'action add'
 
-    = semantic_form_for @backend_api.proxy,
-            url: admin_service_integration_path(@backend_api.service, anchor: 'proxy'),
-            remote: current_account.provider_can_use?(:async_apicast_deploy),
-            html: { \
-              data: { gid: @backend_api.proxy.to_gid_param, version: @backend_api.proxy.lock_version },
-              class: css_class('staging-settings proxy-settings',
-                      oauth: @backend_api.backend_version.oauth?,
-                      oidc: current_account.provider_can_use?(:apicast_oidc)) \
-            } do |f|
+  tbody
+    - metrics = options_from_collection_for_select(@backend_api.metrics, 'id', 'name')
 
-      = help_bubble( 'proxy_rule_bubble', t('api.integrations.proxy.proxy_rule_help_html'))
-
-      table#proxy-rules
-        thead
-          tr
-            th Verb
-            th Pattern
-            th title="increment" +
-            th
-              ' Metric or Method
-              | (
-              = link_to 'Define', provider_admin_backend_api_metrics_path(@backend_api), title: 'Define Methods & Metrics for this service'
-              | )
-            th colspan="2"
-              ' Last?
-
-        tbody#sortable.ui-sortable
-          - metrics = options_from_collection_for_select(@backend_api.metrics, 'id', 'name')
-
-          - @backend_api.proxy_rules.ordered.each_with_index do |rule, i|
-            tr.ui-sortable-item
-              = render 'api/integrations/apicast/shared/mapping_rule', form: f, rule: rule, metrics: metrics, index: (i + 1)
-          tr#new-proxy-rule-template.ui-sortable-item style="display:none;"
-            = render 'api/integrations/apicast/shared/mapping_rule', form: f, rule: @backend_api.proxy_rules.new(delta: 1), disabled: true, metrics: metrics
-        tfoot
-          tr
-            th colspan="6"
-              = link_to "Add Mapping Rule", '#add-proxy-rule', class: 'action add', id: 'add-proxy-rule'
-
-  - content_for :javascripts do
-    = javascript_include_tag 'mapping_rules'
+    - @backend_api.proxy_rules.ordered.each do |rule|
+      tr
+        td
+          = rule.http_method
+        td
+          = rule.pattern
+        td
+          = rule.delta
+        td
+          = rule.metric.name
+        td
+          - if rule.last
+            i.fa.fa-check
+        td.actions
