Fix CSS: input number box must have same size as input text

--- a/app/assets/stylesheets/provider/_forms.scss
+++ b/app/assets/stylesheets/provider/_forms.scss
@@ -4,10 +4,12 @@ form.formtastic ol, form.formtastic ul {
 
 input[type='text'],
 input[type='search'],
+input[type='number'],
 textarea,
 select,
 button,
 form.formtastic fieldset.inputs input[type='text'],
+form.formtastic fieldset.inputs input[type='number'],
 form.formtastic fieldset.inputs input[type='tel'],
 form.formtastic fieldset.inputs input[type='email'],
 form.formtastic fieldset.inputs input[type='url'],
@@ -37,6 +39,7 @@ form.formtastic fieldset.inputs input[type='password'] {
 .error textarea,
 .error select,
 form.formtastic fieldset.inputs .error input[type='text'],
+form.formtastic fieldset.inputs .error input[type='number'],
 form.formtastic fieldset.inputs .error input[type='tel'],
 form.formtastic fieldset.inputs .error input[type='email'],
 form.formtastic fieldset.inputs .error input[type='url'],
