--- a/app/views/shared/provider/navigation/audience/_accounts.html.slim
+++ b/app/views/shared/provider/navigation/audience/_accounts.html.slim
@@ -3,7 +3,7 @@
          title: 'Listing',
          path:  admin_buyers_accounts_path
 
-- if can?(:manage, :account_plans) && current_account.settings.account_plans.allowed? && current_account.settings.account_plans_ui_visible?
+- if account_plans_management_visible?
   =  vertical_nav_item,
        title: 'Account Plans',
        path:   admin_buyers_account_plans_path
