--- a/app/views/buyers/service_contracts/new.html.erb
+++ b/app/views/buyers/service_contracts/new.html.erb
@@ -1,8 +1,8 @@
 <h1>New service subscription</h1>
 
 <%= semantic_form_for @service_contract,
-  :url => admin_buyers_account_service_contracts_path(@account, :service_id => @service.id),
-  :html => { :'data-remote' => true } do |form| %>
+  url: admin_buyers_account_service_contracts_path(@account, service_id: @service.id),
+  html: { data: { remote: true } } do |form| %>
 
   <%= form.inputs do %>
 
@@ -11,11 +11,11 @@
       <p><%= h @service.name %></p>
     </li>
 
-    <%= form.input :plan, :collection => @service_plans, :include_blank => !@service_contract.plan_id? %>
+    <!--  It will prompt only if there is no default service plan selected -->
+    <%= form.input :plan, collection: @service_plans, prompt: !@service_contract.plan_id? %>
   <% end %>
 
   <%= form.buttons do %>
-    <%= form.commit_button 'Create subscription', :button_html => {:'data-disable-with' => 'Creating subscription...' } %>
+    <%= form.commit_button 'Create subscription', button_html: { data: { disable_with: 'Creating subscription...' } } %>
   <%-end%>
 <%-end %>
-
