--- a/app/assets/stylesheets/provider/_vertical_nav.scss
+++ b/app/assets/stylesheets/provider/_vertical_nav.scss
@@ -6,4 +6,8 @@
     // Give artificial margin-top of pf-c-nav__section
     margin-top: 2rem;
   }
+
+  .pf-c-nav__section-title {
+    padding: .5rem 1.5rem .5rem calc(1.5rem + 1rem) !important;
+  }
 }
