--- a/app/views/api/plans/_metrics.html.erb
+++ b/app/views/api/plans/_metrics.html.erb
@@ -10,7 +10,7 @@
     <thead>
       <tr>
         <th colspan="<%= @plan.pricing_enabled? ? 4 : 3 %>">
-          <% if @service.acts_as_product? -%>
+          <% if @service.act_as_product? -%>
             Product Level
           <% else -%>
             Metric or method
@@ -58,7 +58,7 @@
     </tbody>
   </table>
 
-  <% if @service.acts_as_product? -%>
+  <% if @service.act_as_product? -%>
   <table id="backend_api_metrics" class="contract_table">
     <thead>
       <tr>
