--- a/app/views/api/integrations/apicast/shared/_authentication_settings.html.slim
+++ b/app/views/api/integrations/apicast/shared/_authentication_settings.html.slim
@@ -1,12 +1,6 @@
 = f.toggled_inputs 'Authentication Settings' do
   - if @service.oidc?
-    = f.input :oidc_issuer_type, hint: true, as: :select,
-        collection: Proxy.oidc_issuer_types, selected: @proxy.oidc_issuer_type || Proxy.column_defaults['oidc_issuer_type']
-    = f.input :oidc_issuer_endpoint, hint: true, input_html: { placeholder: "https://sso.example.com/auth/realms/gateway" }
-    = f.inputs "OIDC Authorization flow" do
-      = f.semantic_fields_for :oidc_configuration do |config|
-        - OIDCConfiguration::Config::FLOWS.each do |flow|
-          = config.input flow, :as => :boolean
+    = render 'api/integrations/apicast/shared/oidc', f: f
 
   - elsif @service.oauth?
     = f.input :oauth_login_url, label: "OAuth Authorization Endpoint", input_html: { placeholder: "https://#{parameterized_org_name_of_the_current_account}.com/authorize" },  hint: t("formtastic.hints.proxy.#{oauth_hint}")
