--- a/app/views/provider/admin/dashboards/_list_backends.html.slim
+++ b/app/views/provider/admin/dashboards/_list_backends.html.slim
@@ -9,13 +9,13 @@ table class='data'
     - current_account.backend_apis.each do |backend|
       tr
         td
-          = link_to backend.name, %"backend_apis/#{backend.id}"
+          = link_to backend.name, provider_admin_backend_api_path(backend)
         td
           - if backend.services.any?
             i class='fa fa-check'
           - else
             i class='fa fa-times'
         td
-          = link_to %"#{backend.method_metrics.length} Methods", %"p/admin/backend_apis/#{backend.id}/metrics"
+          = link_to pluralize(backend.method_metrics.size, 'Method'), provider_admin_backend_api_metrics_path(backend)
         td
-          = link_to %"#{backend.mapping_rules.length} Mapping Rules", %"p/admin/backend_apis/#{backend.id}/mapping_rules"
+          = link_to pluralize(backend.mapping_rules.size, 'Mapping Rule'), provider_admin_backend_api_mapping_rules_path(backend)
