--- a/app/views/provider/admin/dashboards/_apiap_search_bar.html.slim
+++ b/app/views/provider/admin/dashboards/_apiap_search_bar.html.slim
@@ -2,9 +2,19 @@ div id=id
 
 javascript:
   document.addEventListener('DOMContentLoaded', function () {
-    var apis = #{json collection}
+    var apis = #{ json collection.as_json(root: false, only: [:id, :name]) }
+    var domClass =  "#{ dom_class collection }"
     var placeholder = #{json placeholder}
-    var displayApis = () => {}
+
+    var displayApis = function (filteredApis) {
+      apis.forEach(function (api) {
+        var isFilteredApi = filteredApis.some(function (filteredApi) {
+          return filteredApi.id === api.id
+        });
+
+        document.getElementById(`${domClass}_${api.id}`).classList.toggle('hidden', !isFilteredApi)
+      })
+    }
 
     window.ApiFilter({ apis, placeholder, displayApis }, #{json id})
   })
