--- a/app/views/provider/admin/dashboards/_list_backends.html.slim
+++ b/app/views/provider/admin/dashboards/_list_backends.html.slim
@@ -1,3 +1,5 @@
+- backends = current_account.backend_apis
+
 table class='data'
   thead
     tr
@@ -6,8 +8,8 @@ table class='data'
       th Methods
       th Mapping Rules
   tbody
-    - current_account.backend_apis.each do |backend|
-      tr
+    - backends.each do |backend|
+      tr id=(dom_id backend)
         td
           = link_to backend.name, provider_admin_backend_api_path(backend)
         td
