Share logic between the 2 pages to manage Mapping Rules
Now we have 2 pages to manage mapping rules, 1 for backend apis
and another for the service itself, and some code are being
duplicated between both. This commit tries to reuse some logics
and views for both pages.

--- a/app/views/provider/admin/backend_apis/mapping_rules/index.html.slim
+++ b/app/views/provider/admin/backend_apis/mapping_rules/index.html.slim
@@ -1,41 +1,5 @@
 h2 Mapping Rules
 
-table#mapping_rules.data
-  thead
-    tr
-      th = sortable('proxy_rules.http_method', 'Verb')
-      th = sortable('proxy_rules.pattern', 'Pattern')
-      th title="increment" +
-      th
-        = sortable('metrics.friendly_name', "Metric or Method")
-        |  (
-        = link_to 'Define', provider_admin_backend_api_metrics_path(@backend_api), title: 'Define Methods & Metrics for this service'
-        | )
-      th = sortable('proxy_rules.last', 'Last?')
-      th title="position" = sortable('proxy_rules.position', 'P')
-      th.actions
-        = link_to 'New Mapping Rule',
-                  new_provider_admin_backend_api_mapping_rule_path(@backend_api),
-                  class:'action add'
-
-  tbody
-    - @mapping_rules.each do |rule|
-      tr
-        td
-          = rule.http_method
-        td
-          = rule.pattern
-        td
-          = rule.delta
-        td
-          = rule.metric.friendly_name
-        td
-          - if rule.last
-            i.fa.fa-check
-        td
-          = rule.position
-        td.actions
-          = link_to '', edit_provider_admin_backend_api_mapping_rule_path(@backend_api, rule), class: 'action edit'
-          = link_to '', provider_admin_backend_api_mapping_rule_path(@backend_api, rule), class: 'action delete', method: :destroy, remote: true, data: { confirm: 'Are you sure?' }
-
-= will_paginate @mapping_rules
+= render 'shared/proxy_rules/table', proxy_rules: @proxy_rules,
+                                     new_rule_path: new_provider_admin_backend_api_mapping_rule_path(@backend_api),
+                                     owner: @backend_api
