--- a/app/views/api/services/show.html.slim
+++ b/app/views/api/services/show.html.slim
@@ -162,13 +162,13 @@ section class="service-widget"
           - [:buyers_manage_keys, :buyers_manage_apps, :buyer_plan_change_permission, :buyer_can_select_plan ].map { |setting| friendly_service_setting(service, setting) }.compact.each do |setting|
             li.item
               = setting
-          li.item
-            strong> Backends
-            ' used in this product:
-            ul
-              / TODO: render actual list of backends?
-              li
-                = link_to %"#{@service.name} Backend API", '#', class: 'name'
+          - if service.act_as_product?
+            li.item
+              strong> Backends
+              ' used in this product:
+              ul
+                - service.backend_apis.each do |backend_api|
+                  li = link_to backend_api.name, provider_admin_backend_api_path(backend_api)
 
 = render 'shared/service_access'
 
