--- a/app/assets/stylesheets/provider/_services.scss
+++ b/app/assets/stylesheets/provider/_services.scss
@@ -79,10 +79,21 @@
 
       ul {
         list-style: none;
-        padding: line-height-times(1) line-height-times(1/2);
+        padding: line-height-times(2/3) line-height-times(1/2);
+        column-count: 2;
+        -webkit-column-count: 2;
+        -moz-column-count: 2;
+        column-gap: line-height-times(3);
+        -webkit-column-gap: line-height-times(3);
+        -moz-column-gap: line-height-times(3);
+        column-rule: $border-width solid $border-color;
+        -webkit-column-rule: $border-width solid $border-color;
+        -moz-column-rule: $border-width solid $border-color;
         li {
+          display: inline-block;
+          width: 100%;
+          padding: line-height-times(1/4) 0;
           border-bottom: none;
-          padding: line-height-times(1/2) 0;
         }
       }
     }
