--- a/app/views/shared/_api_selector.html.slim
+++ b/app/views/shared/_api_selector.html.slim
@@ -1,1 +1,1 @@
-#api_selector data-api={currentApi: @service, apis: api_selector_services, activeMenu: active_menu, audienceLink: audience_link}.to_json
+#api_selector data-api={currentApi: current_api, apis: api_selector_services, activeMenu: active_menu, audienceLink: audience_link}.to_json
