--- a/app/assets/stylesheets/provider/_commons.scss
+++ b/app/assets/stylesheets/provider/_commons.scss
@@ -99,6 +99,7 @@ ul, p, ol, dl {
   min-height: line-height-times(1);
   padding: line-height-times(1/2) 0 line-height-times(1/2) 40%;
   border-bottom: $border-width solid $border-color;
+  list-style: none;
 }
 
 .u-dl {
