--- a/app/views/api/integrations/apicast/configuration_driven/_apicast.html.slim
+++ b/app/views/api/integrations/apicast/configuration_driven/_apicast.html.slim
@@ -7,8 +7,11 @@ section.Configuration class=('Configuration--is-promoted' unless deployment_opti
 
     dl.u-dl
       - unless deployment_option_is_service_mesh?(@service)
-        dt.u-dl-term Private Base URL
-        dd.u-dl-definition = @proxy.api_backend
+        dt.u-dl-term Backends
+        dd.u-dl-definition
+          ul
+          - for backend in @service.backend_apis
+            li = link_to backend.name, provider_admin_backend_api_path(backend)
       dt.u-dl-term Mapping rules
       dd.u-dl-definition
         - if (last_rule = @proxy.proxy_rules.last)
