--- a/app/assets/stylesheets/provider/admin/_dashboard.scss
+++ b/app/assets/stylesheets/provider/admin/_dashboard.scss
@@ -15,6 +15,14 @@
 
   &--services {
     margin-top: line-height-times(1.4);
+
+    section.hidden {
+      display: none;
+    }
+
+    tr.hidden {
+      visibility: collapse;
+    }
   }
 
   &-title {
@@ -427,14 +435,3 @@ a:hover .u-notice {
   }
 }
 
-#products {
-  .hidden {
-    display: none;
-  }
-}
-
-#backends {
-  .hidden {
-    visibility: collapse;
-  }
-}
