Add an option to mark that the Service acts as product
THREESCALE-3294

This commit adds a new option in the screen to create a service to
inform that it will act as product. If this options is checked, it
will present a select to choose which backend api will be attached
or if it will create a new one.

--- a/app/views/api/services/new.html.slim
+++ b/app/views/api/services/new.html.slim
@@ -4,4 +4,6 @@
                                              isServiceDiscoveryUsable: service_discovery_usable?,
                                              serviceDiscoveryAuthenticateUrl: service_discovery_presenter.authorize_url,
                                              providerAdminServiceDiscoveryServicesPath: provider_admin_service_discovery_services_path,
-                                             adminServicesPath: admin_services_path }.to_json
+                                             adminServicesPath: admin_services_path,
+                                             apiap: current_account.provider_can_use?(:api_as_product),
+                                             backendApis: current_account.backend_apis.as_json(only: [:id, :name], root: false) }.to_json
