collapse backend api metrics

--- a/app/assets/stylesheets/provider/_commons.scss
+++ b/app/assets/stylesheets/provider/_commons.scss
@@ -200,3 +200,11 @@ hr, {
   color: $success-color;
   cursor: move;
 }
+
+tbody {
+  tr {
+    &.hidden {
+      visibility: collapse;
+    }
+  }
+}
