--- a/app/views/api/plans/_metrics.html.erb
+++ b/app/views/api/plans/_metrics.html.erb
@@ -6,6 +6,7 @@
       Metrics, Methods & Limits
     <% end %>
   </h2>
+
   <table id="metrics" class="contract_table">
     <thead>
       <tr>
@@ -105,5 +106,6 @@
       <% end -%>
     </tbody>
   </table>
+  <%= javascript_pack_tag 'plans-metrics' %>
   <% end -%>
 </div>
