rotates arrow when collapsed/extended

--- a/app/assets/stylesheets/provider/_metrics.scss
+++ b/app/assets/stylesheets/provider/_metrics.scss
@@ -10,6 +10,12 @@ th[data-collapsible="true"] {
       padding-right: 3px;
     }
   }
+
+  &.collapsed {
+    i {
+      transform: rotate(-90deg);
+    }
+  }
 }
 
 table.contract_table {
