--- a/app/assets/stylesheets/provider/_metrics.scss
+++ b/app/assets/stylesheets/provider/_metrics.scss
@@ -29,7 +29,7 @@ th[data-collapsible="true"] {
     cursor: pointer;
 
     i {
-      padding-right: 3px;
+      margin-right: line-height-times(1/4);
     }
   }
 
