--- a/app/assets/stylesheets/provider/_metrics.scss
+++ b/app/assets/stylesheets/provider/_metrics.scss
@@ -14,17 +14,17 @@ table#backend_api_metrics {
       width: 10%;
     }
   }
-  
+
   tbody {
     tr {
       &.hidden {
         display: none;
       }
     }
-  } 
+  }
 }
 
-th[data-collapsible="true"] {
+th.collapsible {
   span {
     cursor: pointer;
 
