:fire: reverts rogue commits

--- a/app/views/api/metrics/_backend_api.erb
+++ b/app/views/api/metrics/_backend_api.erb
@@ -1,8 +1,6 @@
 <tr>
-  <th colspan="7" class="backend_api_metric_title"
-                  data-collapsible="<%= backend_api.top_level_metrics.any? %>"
-                  data-metrics="<%= backend_api.top_level_metrics.map &:id %>">
-    <span><%= backend_api.name %></span>
+  <th colspan="7" class="backend_api_metric_title">
+    <%= backend_api.name %>
     (<%= link_to 'Define method or metric', provider_admin_backend_api_metrics_path(backend_api), title: 'Define Methods & Metrics for this Backend API' %>)
   </th>
 </tr>
