moves some js logic into pack

--- a/app/views/provider/admin/dashboards/_ajax_load.html.slim
+++ b/app/views/provider/admin/dashboards/_ajax_load.html.slim
@@ -1,34 +1,9 @@
 javascript:
-  function loadAudienceWidget (widgetPath) {
-    dashboardWidget(widgetPath)
-  }
-
-  function loadServiceWidget (serviceId, widgetPath) {
-    let container = document.getElementById('service_' + serviceId)
-    let toggleableTitle = container.querySelector('.DashboardSection-toggle')
-
-    if (!toggleableTitle) {
-      dashboardWidget(widgetPath)
-      return
-    }
-
-    let value = window.localStorage['toggle:service_' + serviceId]
-    if (value && !JSON.parse(value)['is-closed']) {
-      dashboardWidget(widgetPath)
-      return
-    }
-
-    toggleableTitle.addEventListener('click', function () {
-      let isCurrentlyClosed = container.classList.contains('is-closed')
-      if (isCurrentlyClosed) {
-        dashboardWidget(widgetPath)
-      }
-    })
-  }
-
   document.addEventListener('DOMContentLoaded', function () {
     let widgetPath = #{json widget.path}
     let serviceId = #{json widget.params[:service_id]}
+
+    const { loadAudienceWidget, loadServiceWidget } = window.dashboardWidget
 
     if (serviceId === null) {
       loadAudienceWidget(widgetPath)
