Show all methods and metrics of a product in app plan edit page
Closes https://issues.jboss.org/browse/THREESCALE-3408

--- a/app/views/api/plans/_metrics.html.erb
+++ b/app/views/api/plans/_metrics.html.erb
@@ -52,7 +52,7 @@
           </td>
         </tr>
       <% else -%>
-        <%= render partial: 'api/metrics/top_level', as: :metric, collection: @service.service_level_metrics, locals: { include_children: @service.act_as_traditional_service? } %>
+        <%= render partial: 'api/metrics/top_level', as: :metric, collection: @service.top_level_metrics %>
       <% end -%>
     </tbody>
   </table>
